# machi-koro

./: .gitignore  AGENT.md  CLAUDE.md  analysis.py  engine.py  justfile  requirements.txt  simulate.py  strategies.py
docs/: SOLVER.md  STRATEGY.md  WEB.md
engine/: __init__.py
graphs/: coast_convergence.json  combined.json  depth10.json  depth2.json  depth3.json  depth4.json  depth5.json  depth6.json  depth6_deep.json  depth7.json  depth8.json  depth9.json  neural.json  neural_deep.json  zoom_in.json
neural/: default_config.json  encode.py  histogram.py  model.py  run.py
neural/model_0/: config.json  latest.pt  log.jsonl
neural/model_1/: latest.pt  log.jsonl
neural/model_2/: config.json  latest.pt  log.jsonl
neural/model_3/: config.json  latest.pt  log.jsonl
neural/model_4/: config.json  latest.pt  log.jsonl
neural/model_5/: config.json  latest.pt  log.jsonl
solver/: Cargo.toml  lookahead_results.json  results.json
solver/src/: build.rs  cache.rs  coast.rs  dice.rs  income.rs  income_strategy.rs  lib.rs  lookahead.rs  main.rs  simulate.rs  solver.rs  state.rs  strategy.rs
strategy/: analysis.py  coast_convergence_plot.py  convergence_plot.py  lookahead.py  lookahead_histogram.py  simulate.py  strategies.py
web/: main.py
web/static/: index.html
